--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>Student MVP Project</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link rel="stylesheet" href="styles.css">
-    <script defer src="/public/public.js"></script>
+    <script defer src="./public.js"></script>
 </head>
 <body>
 </body>
